# HostingBot

./: .gitignore  .replit  add_domain_setup.py  admin_alerts.py  admin_handlers.py  api_management_handlers.py  application_watchdog.py  bot.py  brand_config.py  config.py  create_test_windows_server.py  create_vultr_test_windows.py  database.py  fastapi_server.py  financial_precision.py  handlers.py  handlers_main.py  hosting_monitor.py  localization.py  message_utils.py  openprovider_dnssec_check.json  parallel_operations.py  payment_cleanup_service.py  payment_expiration_notifications.py  payment_state_validation.py  payment_timeout_config.py  payment_validation.py  performance_cache.py  performance_monitor.py  pricing_utils.py  pyproject.toml  pytest.ini  refund_processor.py  requirements.txt  schema.sql  start.py  unified_user_id_handlers.py  upcloud_plans.json  upcloud_windows_templates.json  upcloud_zones.json  (+9 more)
.emergent/: emergent.yml  summary.txt
adapters/: __init__.py  blockbee_adapter.py  dynopay_adapter.py
api/: __init__.py  main.py
attached_assets/: Pasted--12-22-51-32-2025-10-12-21-51-32-306-INFO-payment-cleanup-service-CLEANUP-SERVICE-Next-cleanup-i-1760305963296_1760305963296.txt  Pasted--23-04-09-2025-10-01-22-04-09-810-INFO-database-SQL-UPDATE-Executing-query-with-10-parameters-1-1759377822037_1759377822038.txt  Pasted--42-233-ERROR-services-dynopay-SECURITY-FIX-Failed-to-verify-auth-token-storage-for-order-46-09--1759152420952_1759152420953.txt  Pasted--timestamp-2025-12-31T10-44-10-526257-00-00-level-INFO-_1767177879620.txt  (+111 more)
handlers/: __init__.py  (+8 more)
(+107 files in other folders)
